Theme: removed or changed occurrences of zoom. Fixes #7975 - Remove invalid CSS for legacy browsers
Because of overlapping issues, this also reverts most of e77edc60 and fixes it in a different way.

--- a/themes/base/jquery.ui.tabs.css
+++ b/themes/base/jquery.ui.tabs.css
@@ -11,7 +11,6 @@
 .ui-tabs {
 	position: relative;/* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 	padding: .2em;
-	zoom: 1;
 }
 .ui-tabs .ui-tabs-nav {
 	margin: 0;
